# panel

./: .env  Cargo.toml  README.md
.github/workflows/: integration.yml  next.yml  rust.yml
backend/: .gitignore  Cargo.toml
backend/migrations/2019-10-25-081806_create_servers/: up.sql
backend/migrations/2019-10-25-081806_create_servers_table/: down.sql  up.sql
backend/migrations/2019-10-27-113303_create_users_table/: up.sql
backend/schemas/: schema.graphql
backend/src/: main.rs  nextjs.rs  routes.rs  schema.rs
backend/src/api/: auth.rs  fairing.rs  inputs.rs  mod.rs  models.rs  schema.rs
backend/src/rocket_fairings/: graphql.rs  mod.rs  nextjs.rs
frontend/: .gitignore  jest.config.js  jest.tsconfig.json  next.config.js  package-lock.json  package.json
frontend/__tests__/: index.spec.tsx
frontend/pages/: index.js  index.tsx  servers.js  servers.tsx
frontend/pages/server/: [id].js
frontend/pages/server/[id]/: edit.js  index.js
