[package]
name = "demeter"
version = "0.1.0"
authors = ["Christopher Mühl <github@padarom.xyz>", "Eric Dattore <edattore@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
juniper = "0.10"
juniper_rocket = "0.2.0"
juniper-from-schema = "0.5.0"
diesel = { version = "1.4.0", features = ["sqlite"] }
dotenv = "0.10"
walkdir = "2"
regex = "1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_sqlite_pool", "serve", "json"]
