[package]
name = "demeter"
version = "0.1.0"
authors = ["Christopher Mühl <github@padarom.xyz>", "Eric Dattore <edattore@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
juniper = "0.14.1"
juniper_rocket = "0.5.1"
diesel = { version = "1.4.6", features = ["sqlite"] }
dotenv = "0.10"
walkdir = "2"
regex = "1"
bcrypt = "0.6"
jwt = "0.4.0"
rust-crypto = "0.2"
chrono = "0.4"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_sqlite_pool", "serve", "json", "r2d2"]
